# bevy-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
assets/: dungeon_pack_iso.gen.ron
assets/audio/pong/: licenses.md
assets/plugins/: window.config.ron
assets/sprite_sheets/: stone_floor.gen.ron
assets/tilemaps/: stone _floor.json
credits/: CREDITS.md
docs/: workflows.md
src/: actions.rs  actions_ui.rs  audio.rs  helpers.rs  loading.rs  main.rs  state.rs  ui.rs  window_config.rs
src/editor/: camera.rs  grid.rs  inspector.rs  mod.rs  ui.rs
src/editor/grid/: data.rs  mod.rs
src/game_state/: menu.rs  mod.rs  pong.rs  tick_tack_toe.rs
src/game_state/pong/: ball.rs  goal.rs  mod.rs  paddle.rs  score.rs  wall.rs
src/helpers/: camera.rs  mod.rs  texture.rs
src/loading/: dungeon_pack.rs  inspector_altas.rs  mod.rs
src/menu/: mod.rs
src/pong/: audio.rs  ball.rs  events.rs  goal.rs  mod.rs  paddle.rs  score.rs  wall.rs
src/tanks/: camera.rs  map.rs  mod.rs  player_tank.rs
src/tic-tac-toe/: mod.rs
src/tic_tac_toe/: mod.rs
tools/: cargo.toml
tools/tile-packer/: Cargo.toml
tools/tile-packer/src/: main.rs
