[package]
name = "bevy_slyedoc_template" # TODO: Rename once i figure out what i want to work on
version = "0.1.0"
edition = "2018"



[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [
    #"bevy_audio",
    "bevy_dynamic_plugin",
    "bevy_gilrs",
    "bevy_gltf",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    # "png",
    # "hdr",
    #"mp3",
    #"wav",
    "x11",
    "bevy_dylib", # Faster compile times
]}
# Using alot of patches but I want to link to the forks I am using
bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main", default-features = false, features = ["open_url"] }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui"}
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking" }
bevy_input_actionmap = { git = "https://github.com/lightsoutgames/bevy_input_actionmap" }
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", branch = "bevy_main", features = [ "wav" ] }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "bevy-track" }
bevy_asset_ron = "0.2.0"
bevy_skybox = "0.4.0"
strum = { version = "0.21", features = ["derive"] }
rand = "0.8.4"
pretty-type-name = "1.0.0"
#spritesheet_generator = { git = "https://github.com/slyedoc/spritesheet-generator" }
spritesheet_generator = { path = "../spritesheet_generator" }
ron = "0.6.4"
serde = "1.0.126"
anyhow = "1.0"
convert_case = "0.4.0"


[dev-dependencies]
bevycheck = "0.1.4"

[profile.dev]
opt-level = 1


# Setup to use bevy_main
[patch.crates-io]
bevycheck = { git = "https://github.com/slyedoc/bevycheck" }
bevy_skybox = { git = "https://github.com/slyedoc/bevy_skybox" }
bevy_asset_ron = { path = "../bevy_asset_ron"}

# Setup to use bevy_main
[patch.'https://github.com/lightsoutgames/bevy_input_actionmap']
bevy_input_actionmap = { git = "https://github.com/slyedoc/bevy_input_actionmap" }
#bevy_input_actionmap = { path = "../bevy_input_actionmap" }

# Added more support for controlling windows
[patch.'https://github.com/jakobhellermann/bevy-inspector-egui']
#bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui", default-features = false, features = ["open_url"] }
bevy-inspector-egui = { path = "../bevy-inspector-egui" }

# Setup to use bevy_main instead of rev
[patch.'https://github.com/NiklasEi/bevy_asset_loader']
bevy_asset_loader = { git = "https://github.com/slyedoc/bevy_asset_loader", branch = "bevy_main" }
#bevy_asset_loader = { path = "../bevy_asset_loader/bevy_asset_loader" }

# Setup to use bevy_main instead of rev
[patch.'https://github.com/NiklasEi/bevy_kira_audio']
bevy_kira_audio = { git = "https://github.com/slyedoc/bevy_kira_audio", branch = "bevy_main", features = [ "wav" ] }

# This is fork with jakob changes and multi_thread support
# ran into https://github.com/mvlabat/bevy_egui/issues/32 and trying it out
[patch.'https://github.com/jakobhellermann/bevy_egui']
bevy_egui = { git = "https://github.com/slyedoc/bevy_egui", branch = "bevy-main", default-features = false, features = ["open_url"] }

# Setup to use bevy_main instead of rev
[patch.'https://github.com/StarArawn/bevy_ecs_tilemap']
bevy_ecs_tilemap = { git = "https://github.com/slyedoc/bevy_ecs_tilemap", branch = "bevy-track" }